--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
